# pos_rust

./: .env.example  .gitignore  Cargo.toml
archive/database/01/: require.sql
archive/database/order_items/: create.sql
archive/database/orders/: create.sql
archive/database/products/: create.sql
archive/database/users/: create.sql
src/: main.rs
src/app/: error.rs  state.rs
src/bootstrap/: dir.rs  mod.rs  tracing.rs
src/config/: db.rs
src/controllers/auth/: login.rs  register.rs
src/controllers/orders/: core.rs
src/controllers/products/: core.rs
src/controllers/users/: core.rs  utils.rs
src/dto/: auth.rs  base.rs  mod.rs  orders.rs  products.rs  users.rs
src/middleware/: auth.rs
src/routers/: mod.rs
src/server/: mod.rs
src/utils/: deserialize.rs  file.rs  mod.rs  numeric.rs
tests/: base64.rs  jwt.rs  password_hash.rs
