[package]
name = "pos_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"]}
axum-extra = { version = "0.10.3", features = ["cookie"]}
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.16"
dotenvy = "0.15.7"
serde_json = "1"
serde = "1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
argon2 = { version = "0.5.3", features = ["std"]}
validator = { version = "0.20", features = ["derive"] }
rust_decimal = { version = "1.37", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"]}
chrono = { version = "0.4.4", features = ["serde"]}
jsonwebtoken = "9.3.1"
rand = "0.9.2"
base64 = "0.22.1"
cookie = "0.18.1"
tower-http = { version = "0.6", features = ["cors"] }

[dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "rust_decimal",
    "chrono",
    "uuid",
]